--- a/components/public/master/info.module.css
+++ b/components/public/master/info.module.css
@@ -13,41 +13,53 @@
     color: #47CB43;
 }
 
-.left p {
+.left > p {
     color: #5f5f5f;
 }
 
-.left div {
+.left > div {
     margin-bottom: 10px;
 }
 
-.left div ul {
+.left > div ul {
     margin-bottom: 5px;
+    list-style: none
 }
 
-.left div li {
-    padding-left: 15px;
+.left ul li span {
+    float: right;
+    background: #fff;
+    padding-left: 5px;
+    z-index: 1;
+}
+
+.left > ul > li > p {
+    width: 100%;
+    font-weight: bold;
+    margin-bottom: 5px
+}
+
+.left ul li li p {
+    float: left;
+    background: #fff;
+    padding-right: 5px;
+    z-index: 1;
+}
+
+.left li::marker {
+    color: transparent
+}
+
+.left li li {
     position: relative;
-    list-style: none;
-    color: #6f7580;
-    border-bottom: 1px dashed #e2e2e2;
 }
 
-/*z-index: 1;*/
-/*overflow: hidden;*/
-/*text-overflow: ellipsis;*/
-/*white-space: nowrap;*/
-
-
-.left div li:hover {
-    color: #47CB43;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    transition: all .2s;
-    border-bottom: 1px dashed #afafaf;
-}
-
-.left div li span {
+.left li li::after {
+    content: '';
     position: absolute;
-    right: 0;
+    width: 100%;
+    border-bottom: 1px dashed #cdcdcd;
+    left: 0;
+    z-index: -1;
+    bottom: 5px;
 }
