--- a/components/public/master/portfoliopage.module.css
+++ b/components/public/master/portfoliopage.module.css
@@ -1,53 +1,71 @@
-.left {
-    max-width: 70%;
+.zgl {
+    font-size: 1.2rem;
+    max-width: 65%;
+    margin: 5px 0;
+}
+
+.left2 p:nth-child(3) {
+    font-size: 0.9rem;
+    color: #b8b8b8;
+
+}
+
+.left2 p:nth-child(4) {
+    margin-top: 50px;
+}
+
+.left2 {
+    max-width: 65%;
     border: 1px solid #B9B9B9;
     border-radius: 8px;
     padding: 30px 35px;
 }
 
-.left b:not(:first-child) {
+.left2 b:not(:first-child) {
     margin-top: 25px;
 }
 
-.left b:nth-child(5) {
-    color: #47CB43;
-}
-
-.left p {
+.left2 > p {
     color: #5f5f5f;
 }
 
-.left div {
-    margin-bottom: 10px;
+.left2 > p > span {
+    color: #bbbbbb;
+    margin-right: 15px;
 }
 
-.left div ul {
-    margin-bottom: 5px;
+.left2 ul {
+    margin: 15px 0;
 }
 
-.left div li {
-    padding-left: 15px;
-    position: relative;
+.left2 ul li {
     list-style: none;
-    color: #6f7580;
-    border-bottom: 1px dashed #e2e2e2;
+    margin-right: 10px;
 }
 
-/*z-index: 1;*/
-/*overflow: hidden;*/
-/*text-overflow: ellipsis;*/
-/*white-space: nowrap;*/
-
-
-.left div li:hover {
-    color: #47CB43;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    transition: all .2s;
-    border-bottom: 1px dashed #afafaf;
+.left2 ul img {
+    border-radius: 4px;
 }
 
-.left div li span {
-    position: absolute;
-    right: 0;
+
+
+@media all and (max-width: 1000px) {
+    .left2 {
+        max-width: 100%;
+    }
+
+
+    .rig {
+        max-width: 100%;
+    }
+
 }
+
+
+@media all and (max-width: 500px) {
+    .left li span {
+        color: #47CB43;
+    }
+}
+
+
