--- a/components/public/master/aside.module.css
+++ b/components/public/master/aside.module.css
@@ -1,25 +1,25 @@
-.rig {
-    margin-left: 20px;
-    max-width: 30%;
+.as {
+    max-width: 32%;
+    padding-left: 30px
 }
 
-.rig b {
+.as b {
     font-size: 1.4rem;
     margin-top: 10px;
     margin-bottom: 5px;
 }
 
-.rig li {
+.as li {
     list-style: none;
     padding-left: 35px;
 }
 
-.rig p:nth-child(7) {
+.as p:nth-child(7) {
     color: #9D9D9D;
     margin-top: 10px;
 }
 
-.rig > div > div > p:nth-child(2) {
+.as > div > div > p:nth-child(2) {
     margin: 5px 0 0 20px
 }
 
@@ -63,14 +63,15 @@
 
 
 @media all and (max-width: 1000px) {
-    .rig {
+    .as {
         max-width: 100%;
+        padding-left: 0
     }
 
 }
 
 @media all and (max-width: 400px) {
-    .rig > div > div > p {
+    .as > div > div > p {
         font-size: 0.8rem;
     }
 
