--- a/components/public/master/edit/edit-image.module.css
+++ b/components/public/master/edit/edit-image.module.css
@@ -1,9 +1,11 @@
 .img {
-    display: block;
-    border-radius: 5px;
-    overflow: hidden;
-    box-shadow:  15px 15px 20px #bebebe, -15px -15px 20px white;
-    margin-bottom: 20px
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 5px;
+    border: 1px solid #e0e0e0;
+    border-radius: 6px
 }
 
 .img > div {
@@ -14,8 +16,10 @@
 }
 
 .img img {
-    max-width: 100%;
-    height: auto
+    width: 140px;
+    height: 100px;
+    margin-right: 10px;
+    border-radius: 4px;
 }
 
 .img p {
@@ -29,12 +33,15 @@
     text-shadow: 1px 1px 0 white
 }
 
-.img input {
-    padding: 0 10px;
+.img form {
+    max-width: 220px
+}
+
+.img input, .img textarea {
+    padding: 5px;
     margin-bottom: 10px;
-    height: 22px;
+    width: 100%;
     font-size: 1rem;
-    width: 75%;
     border: none;
     border-radius: 2px;
     box-shadow: inset 5px 5px 8px #cecece,
@@ -42,14 +49,23 @@
     text-shadow: 1px 1px 0 white
 }
 
+.img input:focus, .img textarea:focus {
+    outline: none;
+    box-shadow: inset 0 0 8px #bbecff;
+}
+
+.img input {
+    padding: 0 10px;
+    height: 26px
+}
+
 .img input[type=submit] {
-    width: 40%;
+    width: 45%;
     background-color: #bfdbdf;
-    border-radius: 10px;
-    height: 34px;
-    box-shadow: 5px 5px 8px #cecece, -5px -5px 8px #f2f2f2;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px #cecece;
     display: block;
-    margin: 5px auto 15px auto;
+    margin: 5px auto 10px auto;
     transition: all .3s
 }
 
