--- a/components/public/master/comments.module.css
+++ b/components/public/master/comments.module.css
@@ -1,11 +1,74 @@
-.left {
-    max-width: 68%;
-    border: 1px solid #B9B9B9;
-    border-radius: 8px;
-    padding: 30px 35px;
+.pad b {
+    padding-right: 10px;
 }
 
-.left > div {
+.pad p {
+    padding-right: 10px;
+    color: #6d6d6d;
+}
+
+.cont {
+    border: 1px solid #B9B9B9;
+    border-radius: 8px;
+    padding: 15px;
+    max-width: 65%;
+    margin: 15px 0 10px 0;
+}
+
+.cont > p:nth-child(1) {
+    color: #fff;
+    background: #47CB43;
+    padding: 5px 15px;
+    border-radius: 4px;
     margin-bottom: 10px;
-    width: 100%
+}
+
+.cont p {
+    padding: 10px 0;
+}
+
+.cont a {
+    color: #00688c;
+}
+
+.cont a:hover {
+    color: #009bd0;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+}
+
+.cont img {
+    margin: 10px 10px 10px 0;
+    border-radius: 4px;
+}
+
+.wow > div:nth-child(2) > p:nth-child(1) {
+    background: #CA1800;
+}
+
+
+
+@media all and (max-width: 1200px) {
+    .cont {
+        max-width: 100%;
+        padding: 25px;
+    }
+}
+
+
+@media all and (max-width: 1200px) {
+    .cont {
+        padding: 15px;
+    }
+
+    .pad {
+        flex-direction: column;
+    }
+
+    .pad p, .pad b {
+        margin-top: 15px;
+    }
+
+
 }
