--- a/pages/orders/add.module.css
+++ b/pages/orders/add.module.css
@@ -1,64 +1,53 @@
 .h1 {
-    margin-top: 30px;
+    font-size: 2rem;
+    margin: 30px 0 15px 0;
 }
 
-.tyt {
-    margin-top: 30px;
+.imgs {
+    margin-top: 10px
 }
 
-.tyt span {
-    color: #47CB43;
-    position: absolute;
-    margin: -10px 20px;
-    background: #ffffff;
-    z-index: 1;
-}
-
-.tab {
+.add_img {
+    width: 140px;
+    height: 100px;
+    background: #AAA;
     position: relative;
-    border: 1px solid #f3f3f3;
-    border-radius: 8px 8px 0 8px;
-    max-width: 400px;
-    padding: 20px;
+    border-radius: 5px;
+    transition: all .3s
 }
 
-
-.tab:hover {
-    background: #fafaff;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    transition: all .3s;
+.add_img:hover {
+    background: #EEE
 }
 
-.tab > p {
-    color: #929292;
-    margin-top: 5px;
+.add_img > span {
+    position: absolute;
+    width: 100%;
+    font-weight: bold;
+    text-align: center;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    pointer-events: none;
+    text-shadow: 0 1px 1px black, 0 0 4px #AAA
 }
 
-.tab > p > span {
-    color: #d5d5d5;
+.add_img > span svg {
+    width: 26px;
+    height: 26px;
+    display: block;
+    margin: 0 auto;
+    filter: drop-shadow(0 1px 1px black) drop-shadow(0 0 4px #AAA);
 }
 
-.in1 {
-    padding-left: 200px;
-    padding-right: 200px;
-    margin-bottom: 25px;
-    filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 0.02));
-}
-
-
-
-
-@media all and (max-width: 900px) {
-    .in1 {
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-}
-
-@media all and (max-width: 390px) {
-    .in1 {
-        padding-left: 0;
-        padding-right: 0;
-    }
+.add_img > div, .add_img > div * {
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    border: none
 }
