--- a/pages/masters/masters.module.css
+++ b/pages/masters/masters.module.css
@@ -86,46 +86,42 @@
     margin-top: 30px;
 }
 
-.right > div {
+.master {
     position: relative;
     margin-bottom: 15px;
-    padding: 40px;
+    padding: 30px;
     border: 1px solid #B9B9B9;
     border-radius: 8px;
 }
 
-.right > div:nth-child(1) {
-    margin-bottom: 15px;
-    padding: 0;
+.others {
+    margin-bottom: 25px;
+    padding: 0 20px;
     border: none;
 }
 
-.right > div:nth-child(1) b {
+.others b {
+    display: block;
     font-size: 1.3rem;
-    margin: 0;
-}
-.right > div:nth-child(1) p {
-    margin: 15px 0;
+    margin-bottom: 15px
 }
 
-.right > div:nth-child(1) p:nth-child(1) {
-    margin-top: 44px;
+.others a {
+    display: grid;
+    grid-template-columns: 3fr minmax(100px, 1fr);
+    grid-gap: 15px;
+    width: 100%;
+    margin: 10px 0;
 }
 
-.right img {
-    border-radius: 60px
+.master > div:nth-child(1) img {
+    border-radius: 60px;
+    margin-right: 20px
 }
 
-.right > div > b {
+.master > b {
     margin-left: 15px;
     margin-bottom: 20px;
-}
-
-.right span {
-    position: absolute;
-    left: 130px;
-    top: 80px;
-    color: #47CB43;
 }
 
 .very {
@@ -151,7 +147,7 @@
     transition: all .3s;
 }
 
-.grayp p {
+.gray p {
     color: #CACACA;
     margin-right: 20px;
     margin-bottom: 15px;
@@ -162,10 +158,13 @@
     border-bottom: 1px dashed #CACACA;
 }
 
-.imge img {
-    margin-top: 30px;
+.img {
+    margin: 30px 0 20px 0
+}
+
+.img img {
+    margin: 0 10px 10px 0;
     border-radius: 4px;
-    margin-right: 15px;
 }
 
 .vo {
