--- a/components/public/masters/master.module.css
+++ b/components/public/masters/master.module.css
@@ -1,11 +1,10 @@
 .master {
     position: relative;
-    margin-bottom: 15px;
-    padding: 30px;
     border: 1px solid #B9B9B9;
     border-radius: 8px;
+    margin-bottom: 30px;
+    padding: 25px 30px
 }
-
 
 .master > div:nth-child(1) img {
     border-radius: 60px;
@@ -51,13 +50,18 @@
     border-bottom: 1px dashed #CACACA;
 }
 
-.img {
+.gal {
     margin: 30px 0 20px 0
 }
 
-.img img {
-    margin: 0 10px 10px 0;
+.gal img {
     border-radius: 4px;
+    margin: 0 9px 9px 0;
+    cursor: pointer;
+}
+
+.gal img:last-of-type {
+    margin: 0
 }
 
 .vo {
