--- a/pages/master/[id]/master.module.css
+++ b/pages/master/[id]/master.module.css
@@ -40,6 +40,12 @@
     background-color: #47CB43
 }
 
+.d3 {
+    display: grid;
+    grid-template-columns: 1fr 340px;
+    grid-gap: 30px
+}
+
 .tabs {
     margin: 40px 0 20px 0;
     padding-bottom: 5px;
