--- a/styles/for-clients.module.css
+++ b/styles/for-clients.module.css
@@ -7,6 +7,16 @@
     font-size: 1.5rem;
 }
 
+.st1 > div > h3 {
+    font-weight: 100;
+    font-size: 1.5rem;
+}
+
+.d2 > h3 {
+    font-weight: 100;
+    font-size: 1.5rem;
+}
+
 .st1 > div > p {
     font-size: 1.1rem;
     color: #888888;
@@ -108,6 +118,9 @@
     line-height: 160%;
 }
 
+.lin1 {
+    margin-top: 20px;
+}
 
 .lin1 div {
     max-width: 349px;
@@ -197,6 +210,16 @@
     border-radius: 8px;
 }
 
+.statis {
+    margin-top: 30px;
+}
+
+.statis p {
+    border: 1px solid #71C36E;
+    border-radius: 8px;
+    padding: 24px 32px;
+}
+
 
 @media all and (max-width: 1200px) {
 
@@ -219,12 +242,17 @@
     .sct {
         max-width: 100%;
         height: 100%;
-        margin-top: 20px;
+        margin-top: 30px;
         padding: 20px 25px;
     }
 
     .lin1 {
         justify-content: space-around;
+    }
+
+    .statis p {
+        margin-top: 10px;
+        padding: 10px 15px;
     }
 }
 
@@ -290,7 +318,13 @@
 
 @media all and (max-width: 450px) {
     .bl1 > div > img {
-        margin-top: 15px;
+        margin-top: 35px;
+    }
+
+    .bl2 {
+        height: 130px;
     }
 }
+
+
 
