--- a/components/public/master/aside.module.css
+++ b/components/public/master/aside.module.css
@@ -1,17 +1,20 @@
 .as b {
     font-size: 1.4rem;
     margin-top: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 5px
 }
 
 .as li {
-    list-style: none;
-    padding-left: 35px;
+    list-style: none
+}
+
+.as li li {
+    padding-left: 35px
 }
 
 .as p:nth-child(7) {
     color: #9D9D9D;
-    margin-top: 10px;
+    margin-top: 10px
 }
 
 .as > div > div > p:nth-child(2) {
@@ -20,6 +23,6 @@
 
 @media all and (max-width: 400px) {
     .as > div > div > p {
-        font-size: 0.8rem;
+        font-size: 0.8rem
     }
 }
