--- a/components/public/masters/main.module.css
+++ b/components/public/masters/main.module.css
@@ -10,6 +10,11 @@
     top: 7px
 }
 
+.link {
+    color: #2F80ED!important;
+    text-decoration: underline
+}
+
 .place {
     padding: 30px 40px;
     border: 1px solid #eaeaea;
