--- a/components/public/masters/master.module.css
+++ b/components/public/masters/master.module.css
@@ -42,6 +42,12 @@
     list-style: none
 }
 
+.master > p {
+    color: #AAA;
+    font-size: .9rem;
+    margin-bottom: 10px
+}
+
 .master > ul li p {
     color: #2F80ED;
 }
@@ -50,6 +56,10 @@
     color: #CACACA;
     margin-right: 20px;
     margin-bottom: 15px;
+}
+
+.text {
+    margin-bottom: 30px
 }
 
 .text button {
@@ -65,11 +75,12 @@
     white-space: pre-wrap;
     max-height: 5.5em;
     line-height: 1.4em;
-    overflow: hidden
+    overflow: hidden;
+    transition: all .3s
 }
 
 .gal {
-    margin: 30px 0 20px 0
+    margin-bottom: 20px
 }
 
 .gal img {
