--- a/pages/master/[id]/edit/edit.module.css
+++ b/pages/master/[id]/edit/edit.module.css
@@ -161,8 +161,8 @@ li.edit_price:hover {
 }
 
 .link {
-    color: #2F80ED;
-    border-bottom: 1px dashed #2F80ED;
+    color: #4DA8FE!important;
+    border-bottom: 1px dashed #4DA8FE
 }
 
 .regions {
