--- a/pages/orders/order.module.css
+++ b/pages/orders/order.module.css
@@ -36,7 +36,7 @@
 }
 
 .bottom {
-    margin-top: 30px;
+    margin: 30px 0 60px 0;
     display: grid;
     grid-template-columns: 420px 1fr;
     grid-gap: 20px
