--- a/pages/orders/order.module.css
+++ b/pages/orders/order.module.css
@@ -73,6 +73,11 @@
     background: #067800
 }
 
+.offers > p {
+    margin: 50px 0 30px 0;
+    font-size: 1.1rem
+}
+
 .offered {
     margin: 20px 0;
     padding: 30px 40px;
